--- a/QuanLyLinhKien/src/View/XacThuc/QuenMatKhau.form
+++ b/QuanLyLinhKien/src/View/XacThuc/QuenMatKhau.form
@@ -27,7 +27,7 @@
           <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                  <Component id="pnDangKy" min="-2" max="-2" attributes="0"/>
+                  <Component id="pnQuenMatKhau" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -39,7 +39,7 @@
           <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                  <Component id="pnDangKy" min="-2" max="-2" attributes="0"/>
+                  <Component id="pnQuenMatKhau" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -47,7 +47,7 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Container class="javax.swing.JPanel" name="pnDangKy">
+    <Container class="javax.swing.JPanel" name="pnQuenMatKhau">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="f3" green="d9" red="af" type="rgb"/>
@@ -220,6 +220,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Ho&#xe0;n t&#x1ea5;t"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnQuenMKActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
